<resources>
    <string name="app_name">ToDoList</string>
    <string name="cancelar">Cancelar</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="salvar_tarefa">Salvar Tarefa</string>
    <string name="data">Data</string>
    <string name="descri_o">Descrição</string>
    <string name="t_tulo">Título</string>
    <string name="hora">Hora</string>
    <string name="title_tasks">Tarefas</string>
    <string name="create_new_task">Criar nova tarefa</string>
    <string name="edit_text">Editar</string>
    <string name="delete_text">Excluir</string>
</resources>